Contains logic to add job to the local Storage and also has javascript code to generate unique id. Some css styling has been modified and error UI element has been added

--- a/src/client/styles/form-modal.scss
+++ b/src/client/styles/form-modal.scss
@@ -48,6 +48,9 @@
             border: 1px solid #940594;
         }
 
+        ::before {
+            content: "\f002"
+        }
     }
 
     label{
