Added logic to randomly add color to the background and border for the job list cards

--- a/src/client/styles/job-list.scss
+++ b/src/client/styles/job-list.scss
@@ -20,10 +20,10 @@
     flex-flow: column;
     justify-content: flex-start;
     align-items: stretch;
-    border: 1px solid rgb(94, 223, 94);
     color: white;
     border-radius: 0.25em;
-    background: rgb(94, 223, 94);
+    // border: 1px solid lightgreen;
+    // background: lightgreen;
     width: 45vw;
     height: 25vh;
     padding: 8px;
