Code refactoring to add delete job list modal to confirm user action before job gets deleted. CSS styling for the delete modal buttons and added code comments

--- a/src/client/styles/form-modal.scss
+++ b/src/client/styles/form-modal.scss
@@ -26,7 +26,7 @@
 .form-class {
     display: flex;
     flex-flow: column;
-    width: 40vw;
+    width: 45vw;
     height: 30vh;
     align-items: stretch;
     justify-content: flex-start;
@@ -58,6 +58,7 @@
         h2{
             color: #2b012b;
             text-align: center;
+            font-size: 1em;
         }
         
     }
