--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -37,7 +37,7 @@
 
                 </div>
 
-                <div class="form-modal-class">
+                <div class="form-modal-class" id="add-form-modal-id">
                     
                     <div class="close-button-class">
                         <span id="form-close-btn-id">&times;</span>
@@ -51,6 +51,25 @@
                             <button type="submit" id="submit-button-id">Continue</button>
                         </div>
                     </form>   
+
+                </div>
+
+                <div class="form-modal-class" id="delete-form-modal-id">
+
+                    <form id="delete-form-id">
+                    
+                        <div class="form-class">
+
+                            <label><h2>Delete a Job </h2></label>
+                            <label><h3>Are you Sure You want to Delete?</h3></label>
+                            <div class="delete-button-class">
+                                <button id="cancel-delete-id">Cancel</button>
+                                <button id="confirm-delete-id">Continue</button>
+                            </div>
+
+                        </div>
+
+                    </form>
 
                 </div>
 
